Bug 351777: domain fixup/guessing broken, r=biesi, sr=bzbarsky